K8S/mssql-plat-depl.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name:  mssql-depl
# spec:
#   selector:
#     matchLabels:
#       app: mssql
#   replicas: 1
#   strategy:
#     rollingUpdate:
#       maxSurge: 25%
#       maxUnavailable: 25%
#     type: RollingUpdate
#   template:
#     metadata:
#       labels:
#         app:  mssql
#     spec:
#       # initContainers:
#         # Init containers are exactly like regular containers, except:
#           # - Init containers always run to completion.
#           # - Each init container must complete successfully before the next one starts.
#       containers:
#       - name:  mssql
#         image:  mcr.microsoft.com/mssql/server:2017-latest
#         ports: 
#           - containerPort: 1433
#         env:
#           - name:  MSSQL_PID
#             value: "Express"
#           - name: ACCEPT_EULA
#             value: "Y"
#           - name:  SA_PASSWORD
#             valueFrom:
#               secretKeyRef:
#                 name: mssql
#                 key: SA_PASSWORD
#         volumeMounts:
#           - mountPath: /var/opt/mssql/data
#             name: mssqldb
#         resources:
#           requests:
#             cpu: 800m
#             memory: 15Gi
#           limits:
#             cpu: 800m
#             memory: 15Gi
#         livenessProbe:
#           tcpSocket:
#             port: 80
#           initialDelaySeconds: 5
#           timeoutSeconds: 5
#           successThreshold: 1
#           failureThreshold: 3
#           periodSeconds: 10
#         readinessProbe:
#           httpGet:
#             path: /_status/healthz
#             port: 80
#           initialDelaySeconds: 5
#           timeoutSeconds: 2
#           successThreshold: 1
#           failureThreshold: 3
#           periodSeconds: 10
#       volumes:
#         - name: mssqldb
#           persistentVolumeClaim:
#             claimName:  mssql-claim
#       restartPolicy: Always

apiVersion: apps/v1
kind: StatefulSet
metadata:
 name: mssql # name of the StatefulSet workload, the SQL Server instance name is derived from this. We suggest to keep this name same as the .spec.template.metadata.labels, .spec.selector.matchLabels and .spec.serviceName to avoid confusion.
spec:
 serviceName: "mssql" # serviceName is the name of the service that governs this StatefulSet. This service must exist before the StatefulSet, and is responsible for the network identity of the set.
 replicas: 1 # only one pod, with one SQL Server instance deployed.
 selector:
  matchLabels:
   app: mssql  # this has to be the same as .spec.template.metadata.labels
 template:
  metadata:
   labels:
    app: mssql # this has to be the same as .spec.selector.matchLabels, as documented [here](https://kubernetes.io/docs/concepts/workloads/controllers/statefulset/):
  spec:
   securityContext:
     fsGroup: 10001
   containers:
   - name: mssql # container name within the pod.
     image: mcr.microsoft.com/mssql/server:2019-latest
     ports:
     - containerPort: 1433
       name: tcpsql
     volumeMounts:
     - name: mssql
       mountPath: "/var/opt/mssql"
 volumeClaimTemplates:
   - metadata:
      name: mssql
     spec:
      accessModes:
      - ReadWriteOnce
      resources:
       requests:
        storage: 8Gi
---


apiVersion: v1
kind: Service
metadata:
  name: mssql-clusterip-srv
 
spec:
  selector:
    app: mssql
  type: ClusterIP
  ports:
  - name: mssql
    protocol: TCP
    port:  1433
    targetPort: 1433


---


apiVersion: v1
kind: Service
metadata:
  name: mssql-loadbalancer
 
spec:
  selector:
    app: mssql
  type: LoadBalancer
  ports:
  - protocol: TCP
    port:  1433
    targetPort: 1433
