K8S/rabbit-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  rabbitmq-depl
  namespace: default
  labels:
    app:  rabbitmq
spec:
  selector:
    matchLabels:
      app: rabbitmq
  replicas: 1
 
  template:
    metadata:
      labels:
        app:  rabbitmq
    spec:
      # initContainers:
        # Init containers are exactly like regular containers, except:
          # - Init containers always run to completion.
          # - Each init container must complete successfully before the next one starts.
      containers:
      - name:  rabbitmq
        image:  rabbitmq:3-management
         
        # env:
        # - name: DB_HOST
        #   valueFrom:
        #     configMapKeyRef:
        #       name: rabbitmq
        #       key: DB_HOST
        ports:
        - containerPort:  15672
          name:  rmq-mgmt-port
        - containerPort:  5672
          name:  rmq-msg-port

---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-clusterip-srv
 
spec:
  selector:
    app: rabbitmq
  type: ClusterIP
  ports:
  - name: rabbitmq-mgmt-port
    protocol: TCP
    port:  15672
    targetPort: 15672
  - name: rabbitmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672

---

 
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-loadbalancer
  namespace: default
spec:
  selector:
    app: rabbitmq
  type: LoadBalancer
  ports:
  - name: rabbitmq-mgmt-port
    protocol: TCP
    port: 15672
    targetPort: 15672
  - name: rabbitmq-msg-port
    protocol: TCP
    port: 5672
    targetPort: 5672
    # If you set the `spec.type` field to `NodePort` and you want a specific port number,
    # you can specify a value in the `spec.ports[*].nodePort` field.
    # nodePort:
